# CallCenter

./: .gitignore
CallCenter/: CMakeLists.txt  main.cpp
CallCenter/include/: CDR.h  CDRHandler.h  CDRHandlerCfg.h  ICDRHandler.h  ICDRHandlerCfg.h  ICfg.h  IIndexGenerator.h  IOperator.h  IOperatorManagerCfg.h  callCenter.h  common.h  httpServer.h  indexGenerator.h  operator.h  operatorManager.h  operatorManagerCfg.h  timeoutQueue.h  types.h
CallCenter/src/: CDR.cpp  CDRHandler.cpp  CDRHandlerCfg.cpp  ICfg.cpp  callCenter.cpp  httpServer.cpp  indexGenerator.cpp  operator.cpp  operatorManager.cpp  operatorManagerCfg.cpp  timeoutQueue.cpp
CallCenter/tests/: cfgTest.cpp  commonTest.cpp  operatorTest.cpp
CallEmulator/: call_emulator.py  main.py
